2002-12-13  Jeff Johnston  <jjohnstn@redhat.com>

	* mi-basics.exp: Change tests for -environment-directory.  Also add
	tests for -environment-cd, -environment-pwd, and -environment-path.
	Part of fix for PR gdb/741.

2002-11-05  Jeff Johnston  <jjohnstn@redhat.com>

	* gdb792.cc: New file to test patch for PR gdb/792.
	* gdb792.exp: Ditto.

2002-11-04  Elena Zannoni  <ezannoni@redhat.com>

        * mi-console.exp: Use mi_runto, mi_run_to_main, mi_next_to,
	mi_step_to wherever possible.  Update copyright notices.
	* mi-disassemble.exp: Ditto.
	* mi-eval.exp: Ditto.
	* mi-read-memory.exp: Ditto.
	* mi-regs.exp: Ditto.
	* mi-return.exp: Ditto.
	* mi-stack.exp: Ditto.
	* mi-stepi.exp: Ditto.
	* mi-var-block.exp: Ditto.
	* mi-var-cmd.exp: Ditto.
	* mi-watch.exp: Ditto.
	* mi1-console.exp: Ditto.
	* mi1-disassemble.exp: Ditto.
	* mi1-eval.exp: Ditto.
	* mi1-read-memory.exp: Ditto.
	* mi1-regs.exp: Ditto.
	* mi1-return.exp: Ditto.
	* mi1-stack.exp: Ditto.
	* mi1-stepi.exp: Ditto.
	* mi1-var-block.exp: Ditto.
	* mi1-var-cmd.exp: Ditto.
        * mi1-watch.exp: Ditto.

2002-10-23  Jeff Johnston  <jjohnstn@redhat.com>

	* mi-var-cmd.exp: Add tests to verify that a -var-assign that changes
	a value shows up in the changelist of a -var-update.  Part of fix
	for gdb/702.
	* mi1-var-cmd.exp: Ditto.

2002-10-03  Jeff Johnston  <jjohnstn@redhat.com>

	* mi-return.exp: Change expected frame output to remove extraneous
	space in level field when frame level is single digit.  Part of
	fix for PR gdb/192.
	* mi-stack.exp: Ditto.
	* mi1-return.exp: Ditto.
	* mi1-stack.exp: Ditto.

2002-10-03  Jeff Johnston  <jjohnstn@redhat.com>

	* mi-var-block.exp: Change expected output from -var-update
	command to expect list format for "changelist".  Fix for
	PR gdb/672.
	* mi-var-cmd.exp: Ditto.
	* mi-var-child: Ditto.

2002-09-25  Keith Seitz  <keiths@redhat.com>

	* mi-pthreads.exp (get_mi_thread_list): Check if expect_out
	exists before using it.
	(check_mi_and_console_threads): Likewise.